data/derived/sp14/progs/unify/prog1428.ml.out
Characters 102-104:
  let base =  if t="" then sep else h in
                   ^^
Error: This expression has type string but an expression was expected of type
         'a list
